Add data-test-ids to example pages

--- a/examples/checkbox/checkbox-2/checkbox-2.html
+++ b/examples/checkbox/checkbox-2/checkbox-2.html
@@ -98,11 +98,11 @@
             </tr>
           </thead>
           <tbody>
-            <tr>
+            <tr data-test-id="key-tab">
               <th><kbd>Tab</kbd></th>
               <td>Moves keyboard focus among the checkboxes.</td>
             </tr>
-            <tr>
+            <tr data-test-id="key-space">
               <th><kbd>Space</kbd></th>
               <td>
                 <ul>
@@ -129,7 +129,7 @@
             </tr>
           </thead>
           <tbody>
-              <tr>
+              <tr data-test-id="checkbox-role">
                 <th scope="row"><code>checkbox</code></th>
                 <td></td>
                 <td><code>div</code></td>
@@ -140,19 +140,19 @@
                   </ul>
                 </td>
               </tr>
-              <tr>
+              <tr data-test-id="checkbox-tabindex">
                 <td></td>
                 <th scope="row"><code>tabindex=&quot;0&quot;</code></th>
                 <td><code>div</code></td>
                 <td>Includes the checkbox in the page tab sequence.</td>
               </tr>
-              <tr>
+              <tr data-test-id="checkbox-aria-controls">
                 <td></td>
                 <th scope="row"><code>aria-controls=&quot;[IDREFS]&quot;</code></th>
                 <td><code>div</code></td>
                 <td>identifies the set of checkboxes controlled by the mixed checkbox.</td>
               </tr>
-              <tr>
+              <tr data-test-id="checkbox-aria-checked-false">
                 <td></td>
                 <th scope="row"><code>aria-checked=&quot;false&quot;</code></th>
                 <td><code>div</code></td>
@@ -165,7 +165,7 @@
                   </ul>
                 </td>
               </tr>
-              <tr>
+              <tr data-test-id="checkbox-aria-checked-true">
                 <td></td>
                 <th scope="row"><code>aria-checked=&quot;true&quot;</code></th>
                 <td><code>div</code></td>
@@ -178,7 +178,7 @@
                   </ul>
                 </td>
               </tr>
-              <tr>
+              <tr data-test-id="checkbox-aria-checked-mixed">
                 <td></td>
                 <th scope="row"><code>aria-checked=&quot;mixed&quot;</code></th>
                 <td><code>div</code></td>
