made edits to include test refrence

--- a/examples/accordion/accordion.html
+++ b/examples/accordion/accordion.html
@@ -303,7 +303,7 @@
             If the accordion panel is expanded and is not allowed to be collapsed, then set to <code>true</code>.
           </td>
         </tr>
-        <tr>
+        <tr data-test-id="region-role">
           <th scope="row"><code>region</code></th>
           <td></td>
           <td><code>div</code></td>
