made edits to include test refrence

--- a/examples/accordion/accordion.html
+++ b/examples/accordion/accordion.html
@@ -304,7 +304,7 @@
           </td>
         </tr>
         <tr data-test-id="region-role">
-          <th scope="row"><code>region</code></th>
+          <th scope="row">region</th>
           <td></td>
           <td><code>div</code></td>
           <td>Creates a landmark region that contains the currently expanded accordion panel.</td>
