Update one data-test-id

--- a/examples/menu-button/menu-button-links.html
+++ b/examples/menu-button/menu-button-links.html
@@ -118,7 +118,7 @@
             </tr>
           </thead>
           <tbody>
-            <tr data-test-id="button-down-arrow">
+            <tr data-test-id="button-down-arrow-or-space-or-enter">
               <th><kbd>Down Arrow</kbd><br><kbd>Space</kbd><br><kbd>Enter</kbd></th>
               <td>Opens <code>menu</code> and moves focus to first <code>menuitem</code></td>
             </tr>
