--- a/examples/toolbar/toolbar.html
+++ b/examples/toolbar/toolbar.html
@@ -83,8 +83,8 @@
               aria-haspopup="true"
               aria-controls="menu1"
               class=" toolbar-item menu-button">
-              <b>Fonts</b>
-          </div>
+              Fonts
+            </div>
             <ul role="menu" id="menu1">
               <li role="menuitem">Sans-serif</li>
               <li role="menuitem">Serif</li>
