aria1.0 combobox autocomplete list and both examples: Correct up arrow documentation for the textbox
Commit 18eacf8 for issue #821 fixes the behavior of the up arrow when the combobox is not empty and the listbox is open and displays suggested values.
This commit corrects the documentation so that it accurately describes the adjusted behavior.
modified:   examples/combobox/aria1.0pattern/combobox-autocomplete-both.html
modified:   examples/combobox/aria1.0pattern/combobox-autocomplete-list.html

--- a/examples/combobox/aria1.0pattern/combobox-autocomplete-list.html
+++ b/examples/combobox/aria1.0pattern/combobox-autocomplete-list.html
@@ -156,8 +156,9 @@
             <th><kbd>Up Arrow</kbd></th>
             <td>
               <ul>
+                <li>If the textbox is not empty and the listbox is displayed, moves visual focus to the last suggested value.</li>
                 <li>If the textbox is empty, first opens the listbox if it is not already displayed and then moves visual focus to the last option.</li>
-                <li>DOM focus remains on the textbox.</li>
+                <li>In both cases DOM focus remains on the textbox.</li>
               </ul>
             </td>
           </tr>
