--- a/examples/combobox/aria1.0pattern/combobox-autocomplete-both.html
+++ b/examples/combobox/aria1.0pattern/combobox-autocomplete-both.html
@@ -157,8 +157,9 @@
             <th><kbd>Up Arrow</kbd></th>
             <td>
               <ul>
+                <li>If the listbox is displayed and a suggestion is selected, moves visual focus to the last suggested value.</li>
                 <li>If the textbox is empty, first opens the listbox if it is not already displayed and then moves visual focus to the last option.</li>
-                <li>DOM focus remains on the textbox.</li>
+                <li>In both cases DOM focus remains on the textbox.</li>
               </ul>
             </td>
           </tr>
