--- a/examples/toolbar/toolbar.html
+++ b/examples/toolbar/toolbar.html
@@ -14,9 +14,9 @@
 <script src="../js/utils.js" type="text/javascript"></script>
 
 <!--  js and css for this example. -->
+<link href="css/toolbar.css" rel="stylesheet">
 <link href="css/menuButton.css" rel="stylesheet">
 <script src="js/menuButton.js" type="text/javascript"></script>
-<link href="css/toolbar.css" rel="stylesheet">
 <script src="js/toolbar.js" type="text/javascript"></script>
 <script src="js/main.js" type="text/javascript"></script>
 <script src = "js/toolbarItem.js" type="text/javascript"></script>
@@ -70,10 +70,10 @@
             </div> 
           </div>
           <div class="group">
-            <div role="button" class="toolbar-item size" id="large" value="larger" aria-pressed="false" tabindex="1">
+            <div role="button" class="toolbar-item size" id="large" value="larger" aria-disabled="false" tabindex="1">
               <i class="fas fa-plus"></i>
             </div>
-            <div role="button" class="toolbar-item size" id="small" value="smaller" aria-pressed="false" tabindex="1">
+            <div role="button" class="toolbar-item size" id="small" value="smaller" aria-disabled="false" tabindex="1">
               <i class="fas fa-minus"></i>
             </div>
           </div>  
