Remove extra quote

--- a/examples/accordion/accordion.html
+++ b/examples/accordion/accordion.html
@@ -42,7 +42,7 @@
           <h3>
             <button aria-expanded="true" class="Accordion-trigger"
               aria-controls="sect1" id="accordion1id">
-              <div class="Accordion-title"">
+              <div class="Accordion-title">
                 Personal Information
                 <span class="Accordion-icon"></span>
               </div>
