--- a/examples/toolbar/toolbar.html
+++ b/examples/toolbar/toolbar.html
@@ -46,46 +46,89 @@
     <h2 id="ex_label">Example</h2>
     <div role="separator" id="ex_start_sep" aria-labelledby="ex_start_sep ex_label" aria-label="Start of"></div>
     <div id="ex1">
-        <div class="toolbar" role="toolbar" aria-label="Toolbar">
+        <div class="toolbar" role="toolbar" aria-label="Text Formatting" aria-controls="textarea1">
           <div class="group characteristics">
-            <div role="button" class="toolbar-item bold" aria-pressed="false" value="bold" tabindex="0">
+            <div role="button"
+                class="toolbar-item bold"
+                aria-pressed="false"
+                aria-label="bold"
+                value="bold"
+                tabindex="0">
               <i class="fas fa-bold"></i>
             </div>
-            <div role="button" class="toolbar-item italic" aria-pressed="false" value="italic" tabindex="1">
+            <div role="button"
+                class="toolbar-item italic"
+                aria-label="Italic"
+                aria-pressed="false"
+                value="italic"
+                tabindex="-1">
               <i class="fas fa-italic"></i>
             </div>
-            <div role="button" class="toolbar-item underline" aria-pressed="false" value="underline" tabindex="1">
+            <div role="button"
+                class="toolbar-item underline"
+                aria-label="Underline"
+                aria-pressed="false"
+                value="underline"
+                tabindex="-1">
               <i class="fas fa-underline"></i>
             </div>
           </div>
           <div class="group align">
-            <div role="button" class="toolbar-item textAlign" aria-pressed="true" value="left" tabindex="1">
+            <div role="button"
+                class="toolbar-item textAlign"
+                aria-label="Text align left"
+                aria-pressed="true"
+                value="left"
+                tabindex="-1">
               <i class="fas fa-align-left"></i>
             </div>
-            <div role="button" class="toolbar-item textAlign" aria-pressed="false" value="center" tabindex="1">
+            <div role="button"
+                class="toolbar-item textAlign"
+                aria-label="Text align center"
+                aria-pressed="false"
+                value="center"
+                tabindex="-1">
               <i class="fas fa-align-center"></i>
             </div>
-            <div role="button" class="toolbar-item textAlign" aria-pressed="false" value="right" tabindex="1">
+            <div role="button"
+                class="toolbar-item textAlign"
+                aria-label="Text align right"
+                aria-pressed="false"
+                value="right"
+                tabindex="-1">
               <i class="fas fa-align-right"></i>
-            </div> 
+            </div>
           </div>
           <div class="group">
-            <div role="button" class="toolbar-item size" id="large" value="larger" aria-disabled="false" tabindex="1">
+            <div role="button"
+                class="toolbar-item size"
+                id="large"
+                aria-label="Font size larger"
+                value="larger"
+                aria-disabled="false"
+                tabindex="-1">
               <i class="fas fa-plus"></i>
             </div>
-            <div role="button" class="toolbar-item size" id="small" value="smaller" aria-disabled="false" tabindex="1">
+            <div role="button"
+                class="toolbar-item size"
+                id="small"
+                aria-label="Font size smaller"
+                value="smaller"
+                aria-disabled="false"
+                tabindex="-1">
               <i class="fas fa-minus"></i>
             </div>
-          </div>  
+          </div>
           <div class="menu-wrapper group" >
             <div
               role="button"
               aria-haspopup="true"
               aria-controls="menu1"
-              class=" toolbar-item menu-button">
+              class=" toolbar-item menu-button"
+              tabindex="=-1">
               Fonts
             </div>
-            <ul role="menu" id="menu1">
+            <ul role="menu" id="menu1" aria-label="Fonts">
               <li role="menuitem">Sans-serif</li>
               <li role="menuitem">Serif</li>
               <li role="menuitem">Monospace</li>
@@ -102,7 +145,7 @@
         Now we are engaged in a great civil war, testing whether that nation, or any nation, so conceived and so dedicated, can long endure. We are met on a great battle-field of that war. We have come to dedicate a portion of that field, as a final resting place for those who here gave their lives that that nation might live. It is altogether fitting and proper that we should do this.
 
         But, in a larger sense, we can not dedicate, we can not consecrate, we can not hallow, this ground. The brave men, living and dead, who struggled here, have consecrated it, far above our poor power to add or detract. The world will little note, nor long remember what we say here, but it can never forget what they did here. It is for us the living, rather, to be dedicated here to the unfinished work which they who fought here have thus far so nobly advanced. It is rather for us to be here dedicated to the great task remaining before us, that from these honored dead we take increased devotion to that cause for which they gave the last full measure of devotion, that we here highly resolve that these dead shall not have died in vain, that this nation, under God, shall have a new birth of freedom, and that government of the people, by the people, for the people, shall not perish from the earth.
-      </textarea>     
+      </textarea>
     </div>
     <div role="separator" id="ex_end_sep" aria-labelledby="ex_end_sep ex_label" aria-label="End of"></div>
   </section>
@@ -183,7 +226,7 @@
       </table>
     </section>
     <section>
-      <h3 id="kbd_label_2">Menu Button</h3> 
+      <h3 id="kbd_label_2">Menu Button</h3>
       <table aria-labelledby="kbd_label_2" class="def">
         <thead>
           <tr>
@@ -220,7 +263,7 @@
       </table>
     </section>
     <section>
-        <h3 id="kbd_label_2">Menu</h3> 
+        <h3 id="kbd_label_2">Menu</h3>
         <table aria-labelledby="kbd_label_2" class="def">
           <thead>
             <tr>
@@ -367,7 +410,7 @@
       </table>
     </section>
 
-    <section> 
+    <section>
       <h3 id="rps_label_2">Menu Button</h3>
       <table aria-labelledby="rps_label_2" class="data attributes">
         <thead>
@@ -400,7 +443,7 @@
               <td>
                 Provide a reference for screen reader to navigate to the reference content.
               </td>
-          </tr>          
+          </tr>
         </tbody>
       </table>
     </section>
