--- a/examples/toolbar/toolbar.html
+++ b/examples/toolbar/toolbar.html
@@ -15,12 +15,12 @@
 
 <!--  js and css for this example. -->
 
-<link href="css/toolbar.css" rel="stylesheet">
+<link href="css/toolbar.css"    rel="stylesheet">
 <link href="css/menuButton.css" rel="stylesheet">
 
-<script src="js/menuButton.js" type="text/javascript"></script>
-<script src = "js/toolbarItem.js" type="text/javascript"></script>
-<script src="js/toolbar.js" type="text/javascript"></script>
+<script src="js/menuButton.js"        type="text/javascript"></script>
+<script src="js/FormatToolbarItem.js" type="text/javascript"></script>
+<script src="js/FormatToolbar.js"     type="text/javascript"></script>
 
 </head>
 <body>
@@ -48,7 +48,7 @@
     <h2 id="ex_label">Example</h2>
     <div role="separator" id="ex_start_sep" aria-labelledby="ex_start_sep ex_label" aria-label="Start of"></div>
     <div id="ex1">
-        <div class="toolbar" role="toolbar" aria-label="Text Formatting" aria-controls="textarea1">
+        <div class="format" role="toolbar" aria-label="Text Formatting" aria-controls="textarea1">
           <div class="group characteristics">
             <div role="button"
                 class="bold"
@@ -206,7 +206,7 @@
           <tr>
             <th><kbd>Enter</kbd>,<br><kbd>Space</kbd></th>
             <td>
-              Select the toolbar item.
+              Activate the action associated with the toolbar item.
             </td>
           </tr>
           <tr>
